--- a/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
+++ b/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
@@ -267,7 +267,7 @@ ames_data_features_example <- operations_combinations(
 )
 ```
 
-Perhaps you want to calculate some measure of association between your new featurs and `Sale_price`. To keep things simple, I'm going to first remove any columns that contain any NA's or infinite values. I'll also use a random sample of just 1500 rows.
+Perhaps you want to calculate some measure of association between your new features and `Sale_price`. To keep things simple, I'm going to first remove any columns that contain any NA's or infinite values. I'll also use a random sample of just 1500 rows.
 ```{r}
 features_keep <- ames_data_features_example %>% 
   keep(is.numeric) %>% 
@@ -296,7 +296,7 @@ select(ames_sp_features_subset, -Sale_Price) %>%
 
 If doing predictive modeling or inference you probably want to fit any computation and analysis into a `tidymodels` process or other framework. For some brief notes on this see [Interactions example, tidymodels].
 
-# When is this approach innapropriate?
+# When is this approach inappropriate?
 
 Combinatorial growth is very fast^[Non-technical article discussing combinatorial explosion in context of company user growth targets: [Exponential Growth Isn't Cool. Combinatorial Growth Is.](https://medium.com/@TorBair/exponential-growth-isn-t-cool-combinatorial-growth-is-85a0b1fdb6a5).]. As you increase either the number of variables in your pool or the size of each set, you will quickly bump into computational limitations.
 
